avance cuarta seccion o tarifas

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- caja amarilla para registrarse -->
 			<div class="container caja-principal">
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-md-offset-7 col-md-6">
 								<div class="contenido-bienv">
 									<h1 class="titulo-principal">Disfruta del viaje eres dueño de tu tiempo</h1>
 									<p class="parrafo-primera-seccion">viaja con lab < ar</p>
@@ -49,8 +49,9 @@
 					</div>
 				</section>
 <!-- termino navbar y home -->
+<!-- seǵunda sección -->
 <section class="segunda-seccion">
-	<div class="container">
+	<div class="container borde">
 		<div class="row">
 			<div class="col-md-6">
 				<img src="assets/img/celular.png">
@@ -62,7 +63,45 @@
 				 </div>	
 			</div>
 		</div>
+</section><!-- termino segunda sección -->
+
+<!-- tercera sección -->
+<section class="tercera-seccion">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-7 col-md-6">
+				<div class="contenido-segunda-caja">
+					<h1 class="titulo-segunda-caja">Conduce cuando quieras</h1>
+					<p class="parrafo-segunda-caja">LabCar es una opción flexible para alcanzar tus metas financieras.</p>
+					<button type="button" class="btn btn-warning btn-lg">Conviértete en un conductor</button>
+				</div>
+			</div>
+		</div>
+	</div>		
 </section>
+<!-- termino tercera sección -->
+
+<!-- cuarta sección -->
+<section class="cuarta-seccion">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+			    <h3 class="titulo-cuarta-seccion">Tarifas</h3>
+			    <p class="parrafo-cuarta-seccion">Consulta las tarifas LabCar aquí</p>
+				<img src="assets/img/circulo.png"><input type="" name=""><br><br>
+				<img src="assets/img/flecha.png"><input type="" name=""><br><br>
+			    <button type="button" class="btn btn-default btn-lg">Trazar Ruta!</button>
+			</div>	
+
+				<div class="col-md-6">
+					<!-- acá irá el mapa -->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>		
+</section>
+<!-- termino tercera sección -->
 
 
 	
