--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 </nav> <!-- aca termina el navbar -->
 
 <!-- caja amarilla para registrarse -->
-			<div class="container-fluid caja-principal">
+			<div class="container caja-principal">
 				<div class="row">
-					<div class="col-md-offset-7 col-md-6 col-xs-12 col-xs-offset-1">
-						<div class="contenido-bienv">
+					<div class="col-md-offset-7 col-md-6  col-xs-12">
+						<div class="contenido-bienv col-xs-12">
 							<h1 class="titulo-principal hidden-xs">Disfruta del viaje eres dueño de tu tiempo</h1>
 							<h1 class="visible-xs">Comienza a viajar con lab < car</h1>
 
@@ -90,9 +90,9 @@
 <section class="tercera-seccion">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-offset-7 col-md-6 col-xs-12">
-				<div class="contenido-segunda-caja col-xs-12">
-				  <div class="contenido col-xs-12">
+			<div class="col-md-offset-7 col-md-6 ">
+				<div class="contenido-segunda-caja ">
+				  <div class="contenido ">
 						<h1 class="titulo-segunda-caja">Conduce cuando quieras</h1>
 						<p class="parrafo-segunda-caja">LabCar es una opción flexible para alcanzar tus metas financieras.</p>
 						<button type="button" class="btn btn-warning btn-lg">Conviértete en un conductor</button>
@@ -114,7 +114,7 @@
 
 			    <div class="row">
 			     <div class="col-md-1 col-xs-2">
-			     	<img src="assets/img/circulo.png">
+			     	<img src="assets/img/circulo.png" class="img-responsive">
 			     </div>
 			    <div class="col-md-6 col-xs-10">
 				 <div class="form-group">
@@ -125,7 +125,7 @@
 
 				 <div class="row">
 				 <div class="col-md-1 col-xs-2">
-				 	<img src="assets/img/flecha.png">
+				 	<img src="assets/img/flecha.png" class="img-responsive">
 				 </div>
 				 <div class="col-md-6 col-xs-10">
 					<div class="form-group">
@@ -175,7 +175,7 @@
 		  			<li><a href=""></a>Seguridad</li>
 		  		</ul>	
 		  		</div>
-				<div class="col-md-6 visible-xs">
+				<div class="col-xs-6 visible-xs">
 		  		  <div class="redes-soc">
 		  			<i class="fa fa-facebook-official" aria-hidden="true"></i>
                     <i class="fa fa-twitter-square" aria-hidden="true"></i>
