mapa funciona, edición estilos quite paddings

--- a/index.html
+++ b/index.html
@@ -137,14 +137,13 @@
 			</div>	
 				
 			
-				<div class="col-md-6 mapa hidden-xs" id="map">
+				<div class="mapa hidden-xs" id="map">
 					<!-- acá irá el mapa -->				
 
 				</div>
 			</div>
 		</div>
-	</div>
-</div>		
+	</div>		
 </section>
 <!-- termino tercera sección -->
 
@@ -221,10 +220,11 @@
 
 	
 	<!-- necesario cada de uno de estos script NECESARIO JQUERY -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaB6faDC0vHhLt9IHTrCAqHe3II_IRuw0&libraries=places&callback=initMap"
-       async defer></script>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaB6faDC0vHhLt9IHTrCAqHe3II_IRuw0&libraries=places&callback=initMap"
+    async defer></script>
 </body>
 </html>
