--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
 				  </div>	  	    		
 			</div>	
 				
-			
+			<div class="row">
 				<div class="col-md-6 col-xs-12 mapa responsive-img" id="map">
 					<!-- acá irá el mapa -->				
 
 				</div>
+			</div>
 			</div>
 		</div>
 	</div>		
