--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			</div>	
 				
 			<div class="row">
-				<div class="col-md-6 col-xs-12 mapa responsive-img" id="map">
+				<div class="col-md-6 col-xs-12 col-xs-offset-1 mapa responsive-img" id="map">
 					<!-- acá irá el mapa -->				
 
 				</div>
